--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.header {
+  display: flex;
+  align-items: center;
+  padding: 1em 0;
+  margin-top: 1em;
+}
